Fix: Show missing tab-selector on mobile

--- a/responsive.css
+++ b/responsive.css
@@ -185,7 +185,7 @@
 
   /* Nav dropdown */
   .nav-dropdown {
-    display: fixed;
+    display: block;
     position: relative;
     flex: 0 0 auto;
     background: #fff;
